--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <a href="#privacy-policy">Privacy Policy</a> | 
         <a href="#terms-of-service">Terms of Service</a> | 
         <a href="#faq">FAQ</a> |
-        <a href="/huisstijl.html">Brand Identity</a>
+        <a href="huisstijl.html">Brand Identity</a>
         <div style="margin-top: 20px;">
             <a href="https://discord.com" target="_blank">
                 <img src="https://img.icons8.com/ios-filled/50/000000/discord-logo.png" alt="Discord">
