--- a/huisstijl.html
+++ b/huisstijl.html
@@ -98,7 +98,7 @@
             background-color: #f9f9f9;
             color: #333;
         }
-        .color-box.color-box.light-orange.footer {
+        .color-box.color-box.light-orangefooter {
             background-color: #ff6742;
         }
 
@@ -154,7 +154,7 @@
         <div class="color-palette">
             <div class="color-box orange">#FF3300</div>
             <div class="color-box light-orange">#FF6600</div>
-            <div class="color-box light-orange.footer">#ff6742</div>
+            <div class="color-box light-orangefooter">#ff6742</div>
             <div class="color-box gray">#333333</div>
             <div class="color-box light-gray">#F9F9F9</div>
         </div>
