Add logo SVG and update color scheme across multiple HTML files

--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
         body {
             margin: 0;
             font-family: 'Inter', sans-serif;
-            background-color: #f9f9f9;
+            background-color: #f4f4f4;
             color: #333;
             text-align: center;
             line-height: 1.8;
@@ -18,7 +18,7 @@
 
         a {
             text-decoration: none;
-            color: #ff3300;
+            color: #00cc99;
             font-weight: 600;
         }
 
@@ -35,7 +35,7 @@
 
         .error-container h1 {
             font-size: 6rem;
-            color: #ff3300;
+            color: #0066cc;
             margin: 0;
             font-weight: 700;
         }
@@ -47,7 +47,7 @@
 
         .error-container a {
             display: inline-block;
-            background-color: #ff3300;
+            background-color: #0066cc;
             color: #fff;
             padding: 12px 24px;
             font-size: 1rem;
@@ -58,12 +58,12 @@
         }
 
         .error-container a:hover {
-            background-color: #ff6600;
+            background-color: #0099ff;
         }
 
         /* Footer */
         footer {
-            background-color: #ff6742;
+            background-color: #00cc99;
             color: #fff;
             text-align: center;
             padding: 20px 0;
@@ -115,4 +115,4 @@
         </div>
     </footer>
 </body>
-</html></a>
+</html>
