--- a/huisstijl.html
+++ b/huisstijl.html
@@ -10,13 +10,13 @@
         body {
             margin: 0;
             font-family: 'Inter', sans-serif;
-            background-color: #f9f9f9;
+            background-color: #f4f4f4;
             color: #333;
             line-height: 1.8;
         }
 
-         h2, h3 {
-            color: #ff3300;
+        h2, h3 {
+            color: #0066cc;
         }
         h1 {
             color: #ffffff;
@@ -34,7 +34,7 @@
 
         /* Header Section */
         .header {
-            background: linear-gradient(135deg, #ff6600, #ff3300);
+            background: linear-gradient(135deg, #0099ff, #0066cc);
             color: #fff;
             text-align: center;
             padding: 80px 20px;
@@ -82,12 +82,12 @@
             text-align: center;
         }
 
-        .color-box.orange {
-            background-color: #ff3300;
+        .color-box.blue {
+            background-color: #0066cc;
         }
 
-        .color-box.light-orange {
-            background-color: #ff6600;
+        .color-box.light-blue {
+            background-color: #0099ff;
         }
 
         .color-box.gray {
@@ -95,17 +95,18 @@
         }
 
         .color-box.light-gray {
-            background-color: #f9f9f9;
+            background-color: #f4f4f4;
             color: #333;
         }
-        .color-box.color-box.light-orangefooter {
-            background-color: #ff6742;
+
+        .color-box.accent {
+            background-color: #00cc99;
         }
 
         /* Typography Section */
         .typography {
             padding: 60px 20px;
-            background-color: #f9f9f9;
+            background-color: #f4f4f4;
         }
 
         .typography h2 {
@@ -124,7 +125,7 @@
 
         /* Footer */
         footer {
-            background-color: #ff6742;
+            background-color: #00cc99;
             color: #fff;
             text-align: center;
             padding: 20px 0;
@@ -152,11 +153,11 @@
     <section class="brand-colors">
         <h2>Brand Colors</h2>
         <div class="color-palette">
-            <div class="color-box orange">#FF3300</div>
-            <div class="color-box light-orange">#FF6600</div>
-            <div class="color-box light-orangefooter">#ff6742</div>
+            <div class="color-box blue">#0066CC</div>
+            <div class="color-box light-blue">#0099FF</div>
+            <div class="color-box accent">#00CC99</div>
             <div class="color-box gray">#333333</div>
-            <div class="color-box light-gray">#F9F9F9</div>
+            <div class="color-box light-gray">#F4F4F4</div>
         </div>
     </section>
 
