--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport</div>" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>quinteb Studios</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
@@ -10,7 +10,7 @@
         body {
             margin: 0;
             font-family: 'Inter', sans-serif;
-            background-color: #f9f9f9;
+            background-color: #f4f4f4;
             color: #333;
             line-height: 1.8;
             overflow-x: hidden;
@@ -23,7 +23,7 @@
 
         /* Hero Section */
         .hero {
-            background: linear-gradient(135deg, #ff6600, #ff3300);
+            background: linear-gradient(135deg, #0099ff, #0066cc);
             color: #fff;
             text-align: center;
             padding: 120px 20px;
@@ -39,8 +39,8 @@
         }
         .hero a {
             display: inline-block;
-            background-color: #fff;
-            color: #ff3300;
+            background-color: #00cc99;
+            color: #fff;
             padding: 12px 24px;
             font-size: 1rem;
             font-weight: 600;
@@ -49,8 +49,7 @@
             transition: background-color 0.3s ease, color 0.3s ease;
         }
         .hero a:hover {
-            background-color: #ff3300;
-            color: #fff;
+            background-color: #0066cc;
         }
 
         /* Games Section */
@@ -60,7 +59,7 @@
         }
         #games h2 {
             text-align: center;
-            color: #ff3300;
+            color: #0066cc;
             font-size: 2.5rem;
             margin-bottom: 40px;
         }
@@ -72,7 +71,7 @@
             margin: 0 auto;
         }
         .game-card {
-            background: #f9f9f9;
+            background: #f4f4f4;
             border-radius: 10px;
             overflow: hidden;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -92,9 +91,54 @@
             color: #333;
         }
 
+        /* Community Section */
+        #community {
+            padding: 60px 20px;
+            background-color: #f4f4f4;
+        }
+        #community h2 {
+            text-align: center;
+            color: #0066cc;
+            font-size: 2.5rem;
+            margin-bottom: 40px;
+        }
+        #community a {
+            text-decoration: none;
+            color: inherit;
+        }
+        #community a div {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+        }
+        #community a div img {
+            width: 80px;
+            margin-bottom: 15px;
+        }
+        #community a div span {
+            font-weight: 600;
+            font-size: 1.2rem;
+            color: #5865F2;
+        }
+        #community .join-btn {
+            display: inline-block;
+            background-color: #5865F2;
+            color: #fff;
+            padding: 12px 24px;
+            font-size: 1rem;
+            font-weight: 600;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+        #community .join-btn:hover {
+            background-color: #0066cc;
+        }
+
         /* Footer */
         footer {
-            background-color: #ff6742;
+            background-color: #00cc99;
             color: #fff;
             text-align: center;
             padding: 20px 0;
@@ -108,6 +152,10 @@
         }
         footer a:hover {
             text-decoration: underline;
+        }
+        footer div img {
+            width: 50px;
+            margin: 0 10px;
         }
     </style>
 </head>
@@ -134,29 +182,30 @@
             </div>
         </div>
     </section>
-    <section id="community" style="padding: 60px 20px; background-color: #f9f9f9;">
-        <h2 style="text-align: center; color: #ff3300; font-size: 2.5rem; margin-bottom: 40px;">Join Our Community</h2>
+    <section id="community">
+        <h2>Join Our Community</h2>
         <div style="display: flex; justify-content: center; gap: 40px; flex-wrap: wrap;">
-            <a href="https://discord.com" target="_blank" style="text-decoration: none; color: inherit;">
-                <div style="display: flex; flex-direction: column; align-items: center; text-align: center;">
-                    <img src="https://pngimg.com/uploads/discord/discord_PNG11.png" alt="Discord Logo" style="width: 80px; margin-bottom: 15px;">
-                    <span style="font-weight: 600; font-size: 1.2rem; color: #5865F2;">Discord</span>
+            <a href="https://discord.com" target="_blank">
+                <div>
+                    <img src="https://pngimg.com/uploads/discord/discord_PNG11.png" alt="Discord Logo">
+                    <span>Discord</span>
                 </div>
             </a>
         </div>
         <div style="text-align: center; margin-top: 30px;">
-            <a href="https://discord.com" target="_blank" style="display: inline-block; background-color: #5865F2; color: #fff; padding: 12px 24px; font-size: 1rem; font-weight: 600; text-decoration: none; border-radius: 5px; transition: background-color 0.3s ease;">
+            <a href="https://discord.com" target="_blank" class="join-btn">
                 Join Our Discord Server
             </a>
         </div>
-    </section></div>
+    </section>
     <footer>
         <p>© 2025 quinteb Studios. All rights reserved.</p>
         <a href="#contact">Contact Us</a> | 
         <a href="#privacy-policy">Privacy Policy</a> | 
         <a href="#terms-of-service">Terms of Service</a> | 
         <a href="#faq">FAQ</a> |
-        <a href="huisstijl.html">Brand Identity</a>
+        <a href="huisstijl.html">Brand Identity</a> |
+        <a href="">Publishing</a>
         <div style="margin-top: 20px;">
             <a href="https://discord.com" target="_blank">
                 <img src="https://img.icons8.com/ios-filled/50/000000/discord-logo.png" alt="Discord">
@@ -170,4 +219,4 @@
         </div>
     </footer>
 </body>
-</html></div>
+</html>
