Add logo SVG and integrate it into the homepage and style guide

--- a/huisstijl.html
+++ b/huisstijl.html
@@ -160,6 +160,13 @@
             <div class="color-box light-gray">#F4F4F4</div>
         </div>
     </section>
+    <section class="brand-colors">
+        <h2>Our Logo</h2>
+        <div style="text-align: center; margin: 40px 0;">
+            <img src="logo.svg" alt="quinteb Studios Logo" style="max-width: 300px; height: auto;">
+        </div>
+        <p style="text-align: center;">Our logo represents the essence of quinteb Studios, combining modern design with a professional touch.</p>
+    </section>
 
     <section class="typography">
         <h2>Typography</h2>
