--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 </head>
 <body>
     <header class="hero">
-        <h1>Welcome to quinteb Studios</h1>
+        <img src="logo.svg" alt="quinteb Studios Logo" style="width: 100%; max-width: 600px; margin-bottom: 20px;">
         <p>Creating unforgettable gaming experiences for players worldwide.</p>
         <a href="#games">Explore Our Games</a>
     </header>
