--- a/huisstijl.html
+++ b/huisstijl.html
@@ -163,7 +163,7 @@
     <section class="brand-colors">
         <h2>Our Logo</h2>
         <div style="text-align: center; margin: 40px 0;">
-            <img src="logo.svg" alt="quinteb Studios Logo" style="max-width: 300px; height: auto;">
+            <img src="Logo.png" alt="quinteb Studios Logo" style="max-width: 300px; height: auto;">
         </div>
         <p style="text-align: center;">Our logo represents the essence of quinteb Studios, combining modern design with a professional touch.</p>
     </section>
