--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 </head>
 <body>
     <header class="hero">
-        <img src="logo.svg" alt="quinteb Studios Logo" style="width: 80%; max-width: 800px; margin-bottom: 30px;">
+        <img src="Logo.png" alt="quinteb Studios Logo" style="width: 80%; max-width: 800px; margin-bottom: 30px;">
         <p>Creating unforgettable gaming experiences for players worldwide.</p>
         <a href="#games">Explore Our Games</a>
     </header>
