Adjust header padding and logo dimensions in index.html

--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
     </style>
 </head>
 <body>
-    <header class="hero">
-        <img src="Logo.png" alt="quinteb Studios Logo" style="width: 80%; max-width: 200px; margin-bottom: 20px;">
+    <header class="hero" style="padding: 60px 20px;">
+        <img src="Logo.png" alt="quinteb Studios Logo" style="width: 40%; max-width: 150px; margin-bottom: 20px;">
         <p>Creating unforgettable gaming experiences for players worldwide.</p>
         <a href="#games">Explore Our Games</a>
     </header>
