Go Next Studio!

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>quinteb Studios</title>
+    <title>Go Next Studio!</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         /* General Styles */
@@ -160,8 +160,10 @@
     </style>
 </head>
 <body>
-    <header class="hero" style="padding: 60px 20px;">
-        <img src="Logo.png" alt="quinteb Studios Logo" style="width: 40%; max-width: 150px; margin-bottom: 20px;">
+    <header class="hero">
+        <div style="width: 60%; max-width: 300px; margin: 0 auto 20px;"></div>
+        <h1>Go Next Studio!</h1>
+        </div>
         <p>Creating unforgettable gaming experiences for players worldwide.</p>
         <a href="#games">Explore Our Games</a>
     </header>
@@ -199,7 +201,7 @@
         </div>
     </section>
     <footer>
-        <p>© 2025 quinteb Studios. All rights reserved.</p>
+        <p>© 2025 Go Next Studio!. All rights reserved.</p>
         <a href="#contact">Contact Us</a> | 
         <a href="#privacy-policy">Privacy Policy</a> | 
         <a href="#terms-of-service">Terms of Service</a> | 
