--- a/publishing.html
+++ b/publishing.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Publishing - quinteb Studios</title>
+    <title>Publishing - Go Next Studio!</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         /* General Styles */
@@ -110,14 +110,14 @@
 </head>
 <body>
     <header class="header">
-        <h1>Publishing with quinteb Studios</h1>
+        <h1>Publishing with Go Next Studio!</h1>
         <p>Partner with us to bring your games to the world.</p>
     </header>
 
     <section class="publishing">
         <h2>Why Publish with Us?</h2>
         <div class="publishing-content">
-            <p>At quinteb Studios, we are passionate about helping independent developers and studios bring their games to a global audience. With our expertise in marketing, distribution, and game development, we ensure your game reaches its full potential.</p>
+            <p>At Go Next Studio!, we are passionate about helping independent developers and studios bring their games to a global audience. With our expertise in marketing, distribution, and game development, we ensure your game reaches its full potential.</p>
             <p>Join our publishing program and let us handle the complexities of publishing while you focus on creating amazing games.</p>
             <p><strong>Revenue Sharing:</strong> We believe in fair partnerships. Our revenue-sharing model is flexible and tailored to meet the needs of each developer. Transparency and collaboration are at the core of our publishing philosophy. Let’s grow together!</p>
             <a href="#contact" class="cta-button">Get in Touch</a>
@@ -125,7 +125,7 @@
     </section>
 
     <footer>
-        <p>© 2025 quinteb Studios. All rights reserved.</p>
+        <p>© 2025 Go Next Studio!. All rights reserved.</p>
         <a href="#contact">Contact Us</a> | 
         <a href="#privacy-policy">Privacy Policy</a> | 
         <a href="#terms-of-service">Terms of Service</a> | 
