--- a/huisstijl.html
+++ b/huisstijl.html
@@ -3,28 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brand Identity - quinteb Studios</title>
+    <title>Go Next Studio! - Design System</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         /* General Styles */
         body {
             margin: 0;
             font-family: 'Inter', sans-serif;
-            background-color: #f4f4f4;
+            background-color: #f9f9f9;
             color: #333;
-            line-height: 1.8;
+            line-height: 1.6;
         }
 
-        h2, h3 {
-            color: #0066cc;
-        }
-        h1 {
-            color: #ffffff;
+        h1, h2, h3 {
+            margin: 0;
         }
 
         a {
             text-decoration: none;
-            color: #ffffff;
+            color: #00cc99;
             font-weight: 600;
         }
 
@@ -37,95 +34,159 @@
             background: linear-gradient(135deg, #0099ff, #0066cc);
             color: #fff;
             text-align: center;
-            padding: 80px 20px;
+            padding: 100px 20px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
         }
 
         .header h1 {
-            font-size: 3rem;
-            margin: 0;
+            font-size: 3.5rem;
             font-weight: 700;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
         }
 
         .header p {
             font-size: 1.2rem;
-            margin: 20px 0;
+            margin-top: 20px;
         }
 
         /* Brand Colors Section */
         .brand-colors {
             padding: 60px 20px;
             background-color: #fff;
+            text-align: center;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
         }
 
         .brand-colors h2 {
-            text-align: center;
+            font-size: 2rem;
             margin-bottom: 40px;
         }
 
         .color-palette {
-            display: flex;
-            justify-content: center;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
             gap: 20px;
-            flex-wrap: wrap;
+            justify-items: center;
         }
 
         .color-box {
             width: 150px;
             height: 150px;
-            border-radius: 10px;
+            border-radius: 8px;
             display: flex;
             align-items: center;
             justify-content: center;
             color: #fff;
             font-weight: 600;
             font-size: 1rem;
+            cursor: pointer;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        }
+
+        .color-box:hover {
+            transform: scale(1.1);
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
+        }
+
+        .color-box.blue { background-color: #0066cc; }
+        .color-box.light-blue { background-color: #0099ff; }
+        .color-box.accent { background-color: #00cc99; }
+        .color-box.gray { background-color: #333; }
+        .color-box.light-gray { background-color: #f4f4f4; color: #333; }
+
+        /* Logo Section */
+        .logo-section {
+            padding: 60px 20px;
+            background-color: #f9f9f9;
             text-align: center;
         }
 
-        .color-box.blue {
-            background-color: #0066cc;
+        .logo-section img {
+            max-width: 250px;
+            height: auto;
+            margin-bottom: 20px;
+            transition: transform 0.3s ease;
         }
 
-        .color-box.light-blue {
-            background-color: #0099ff;
+        .logo-section img:hover {
+            transform: rotate(10deg) scale(1.1);
         }
 
-        .color-box.gray {
-            background-color: #333;
-        }
-
-        .color-box.light-gray {
-            background-color: #f4f4f4;
-            color: #333;
-        }
-
-        .color-box.accent {
-            background-color: #00cc99;
+        .logo-section p {
+            font-size: 1rem;
+            color: #666;
         }
 
         /* Typography Section */
         .typography {
             padding: 60px 20px;
-            background-color: #f4f4f4;
+            background-color: #fff;
+            text-align: center;
         }
 
         .typography h2 {
-            text-align: center;
+            font-size: 2rem;
             margin-bottom: 40px;
         }
 
         .font-sample {
-            text-align: center;
-            margin-bottom: 20px;
+            margin-bottom: 30px;
         }
 
         .font-sample h3 {
-            margin: 10px 0;
+            font-size: 1.5rem;
+            margin-bottom: 10px;
+        }
+
+        .font-sample p {
+            font-size: 1rem;
+            color: #555;
+        }
+
+        /* Corner Radius Section */
+        .corner-radius {
+            padding: 60px 20px;
+            background-color: #fff;
+            text-align: center;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+        }
+
+        .corner-radius h2 {
+            font-size: 2rem;
+            margin-bottom: 40px;
+        }
+
+        .radius-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+            gap: 20px;
+            justify-items: center;
+        }
+
+        .radius-box {
+            width: 150px;
+            height: 150px;
+            background-color: #00cc99;
+            color: #fff;
+            font-weight: 600;
+            font-size: 1rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            cursor: default;
+        }
+
+        .radius-box:hover {
+            transform: scale(1.1);
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
         }
 
         /* Footer */
         footer {
-            background-color: #00cc99;
+            background-color: #0066cc;
             color: #fff;
             text-align: center;
             padding: 20px 0;
@@ -133,9 +194,7 @@
         }
 
         footer a {
-            color: #ffffff;
-            text-decoration: none;
-            font-weight: 600;
+            color: #fff;
             margin: 0 10px;
         }
 
@@ -146,26 +205,25 @@
 </head>
 <body>
     <header class="header">
-        <h1>quinteb Studios Brand Identity</h1>
-        <p>Explore our brand colors, typography, and design principles.</p>
+        <h1>quinteb Studios</h1>
+        <p>Crafting vibrant and creative experiences through design and innovation.</p>
     </header>
 
     <section class="brand-colors">
         <h2>Brand Colors</h2>
         <div class="color-palette">
-            <div class="color-box blue">#0066CC</div>
-            <div class="color-box light-blue">#0099FF</div>
-            <div class="color-box accent">#00CC99</div>
-            <div class="color-box gray">#333333</div>
-            <div class="color-box light-gray">#F4F4F4</div>
+            <div class="color-box blue" onclick="copyToClipboard('#0066CC')" title="Click to copy #0066CC">#0066CC</div>
+            <div class="color-box light-blue" onclick="copyToClipboard('#0099FF')" title="Click to copy #0099FF">#0099FF</div>
+            <div class="color-box accent" onclick="copyToClipboard('#00CC99')" title="Click to copy #00CC99">#00CC99</div>
+            <div class="color-box gray" onclick="copyToClipboard('#333333')" title="Click to copy #333333">#333333</div>
+            <div class="color-box light-gray" onclick="copyToClipboard('#F4F4F4')" title="Click to copy #F4F4F4">#F4F4F4</div>
         </div>
     </section>
-    <section class="brand-colors">
+
+    <section class="logo-section">
         <h2>Our Logo</h2>
-        <div style="text-align: center; margin: 40px 0;">
-            <img src="Logo.png" alt="quinteb Studios Logo" style="max-width: 300px; height: auto;">
-        </div>
-        <p style="text-align: center;">Our logo represents the essence of quinteb Studios, combining modern design with a professional touch.</p>
+        <img src="Logo.png" alt="quinteb Studios Logo">
+        <p>Our logo reflects the essence of quinteb Studios: modern, professional, and creative.</p>
     </section>
 
     <section class="typography">
@@ -180,12 +238,28 @@
         </div>
     </section>
 
+    <section class="corner-radius">
+        <h2>Corner Radius</h2>
+        <div class="radius-grid">
+            <div class="radius-box" style="border-radius: 4px; ">4px</div>
+            <div class="radius-box" style="border-radius: 8px; background-color: #0099ff;">8px</div>
+            <div class="radius-box" style="border-radius: 16px; background-color: #0066cc;">16px</div>
+        </div>
+    </section>
+
     <footer>
         <p>© 2025 quinteb Studios. All rights reserved.</p>
         <a href="#contact">Contact Us</a> | 
         <a href="#privacy-policy">Privacy Policy</a> | 
-        <a href="#terms-of-service">Terms of Service</a> | 
-        <a href="#faq">FAQ</a>
+        <a href="#terms-of-service">Terms of Service</a>
     </footer>
+
+    <script>
+        function copyToClipboard(hexCode) {
+            navigator.clipboard.writeText(hexCode).then(() => {
+                alert(`Copied ${hexCode} to clipboard!`);
+            });
+        }
+    </script>
 </body>
 </html>
