--- a/index.html
+++ b/index.html
@@ -201,13 +201,14 @@
         </div>
     </section>
     <footer>
-        <p>© 2025 Go Next Studio!. All rights reserved.</p>
+        <p>-Go Next Studio™️ is a trademark of its owner-. All rights reserved.</p>
         <a href="#contact">Contact Us</a> | 
         <a href="#privacy-policy">Privacy Policy</a> | 
         <a href="#terms-of-service">Terms of Service</a> | 
         <a href="#faq">FAQ</a> |
         <a href="huisstijl.html">Brand Identity</a> |
-        <a href="">Publishing</a>
+        <a href="">Publishing</a>|
+        <a href="">Legal</a> 
         <div style="margin-top: 20px;">
             <a href="https://discord.com" target="_blank">
                 <img src="https://img.icons8.com/ios-filled/50/000000/discord-logo.png" alt="Discord">
