--- a/404.html
+++ b/404.html
@@ -97,7 +97,7 @@
         </p>
     </div>
     <footer>
-        <p>© 2025 quinteb Studios. All rights reserved.</p>
+        <p>-Go Next Studio™️ is a trademark of its owner-. All rights reserved.</p>
         <a href="#contact">Contact Us</a> | 
         <a href="#privacy-policy">Privacy Policy</a> | 
         <a href="#terms-of-service">Terms of Service</a> | 
